Revision history for PDF-Tags-Reader

{{$NEXT}}

0.0.11  2023-11-10T10:07:43+13:00
   - Also rename pdf-tag-dump.raku --root-tag option to --root, as
     documented.
   - Other documentation and README fixes.

0.0.10  2023-11-10T08:25:32+13:00
   pdf-tag-dump.raku:
   - Added --quiet option
   - Default --select results to a DocumentFragment root tag.

0.0.9  2023-10-22T05:23:12+13:00
   - Create separate class PDF::Tags::Reader::TextDecoder; built-in text
     decoder.
   - Add tests on Lang attribute; newly introduced in PDF::Tags 0.1.12

0.0.8  2023-07-25T14:48:47+12:00
   - Add -roles option to pdf-tag-dump.raku
   - Add :core-font option to PDF::Font::Loader.load-font - allow loading
     of core fonts.

0.0.7  2022-11-25T07:29:21+13:00
   - Handle /ReversedChars content tags, which usually indicate right-to-left
     text.

0.0.6  2022-07-20T14:30:03+12:00
   - Fix reading of nested marked content in content stream; added
     tests t/nested.t

0.0.5  2022-05-29T11:06:07+12:00
    - Fix t/06xml.t test by omitting PDF::Tags 0.1.2 DOCTYPE declaration

0.0.4  2022-03-31T09:15:19+13:00
    - Handle nested tags within marked content. Skip artifacts.
    - Adjust tests for PDF::Tags 0.1.0+, which no longer treats
      /O (owner) as an attribute
    - move release repository from CPAN to zef ecosystem

0.0.3  2022-02-23T11:38:07+13:00
    - Add detection of implicit newlines for Td (TextMove) when
      significant vertical displacement is detected. This is needed
      to work with Cairo/PDF, which doesn't have newlines or wrapping.
      Also improves XML generation from the PDF Specification in PDF::ISO_32000.

0.0.2  2021-12-28T06:45:07+13:00
    - Adjust tests for PDF::Tags 0.0.13, which no longer inserts extra Span tags.

0.0.1  2021-12-22T11:12:34+13:00
    - Initial version; factored out from PDF::Tags 0.0.11